# AlgEng

./: .gitignore  README.md  amdahl_regression.xmcd  cachefaults strassen.xlsx
project2/: CMakeLists.txt  layouts.h  main.cpp  matrix.h  matrixmul.h  stackallocator.h  test.h
project2/gnuplots/: .recursive_vs_strassen_performance.plot.swp  amdahl.plot  best_parallel.plot  best_single.plot  iterative_cache.plot  iterative_instructions.plot  iterative_performance.plot  parallel_speedup.plot  recursive_base_cases.plot  recursive_cache.plot  recursive_instructions.plot  recursive_performance.plot  recursive_vs_strassen_cache.plot  recursive_vs_strassen_performance.plot  simd_performance.plot  strassen_base_cases.plot
rapport1/: algorithms.tex  benchmarks.tex  conclusion.tex  expectations.tex  expected.lyx  expected.xmcd  implementation.tex  introduction.tex  rapport.tex
rapport2/: algorithms.tex  benchmarks.tex  conclusion.tex  introduction.tex  rapport.aux  rapport.tex  rapport.toc  ref.bib
rapport2/plots/: rowcol.gnuplot  rowcol_simulation.gnuplot  rowcol_vs_rowrow.gnuplot  rowrow.gnuplot  rowrow_cachepeaks.gnuplot
week1/: CMakeLists.txt  ComparisonCounter.cpp  ComparisonCounter.h  blocked  blocked.cpp  blocked.h  constants.h  main.cpp  naive.cpp  naive.h  test.cpp  test.h
week1/plots/: varying_d.gnuplot  varying_d.txt
week1/plots/generators/: Btree_branchmis.gnuplot  Btree_bs_cachefaults.gnuplot  Btree_bs_runningtime.gnuplot  Btree_lin_runningtime.gnuplot  DFS_runningtime.gnuplot  bfs_dfs_16_runningtime.gnuplot  bfs_dfs_cachefaults.gnuplot  bfs_dfs_cachefaults_l3.gnuplot  bfs_dfs_runningtime.gnuplot  binary_runtime.gnuplot  bs_cachefaults.gnuplot  bs_runningtime.gnuplot
